[gd_scene load_steps=6 format=3 uid="uid://dimew6d4702mq"]

[ext_resource type="Script" path="res://ui/pause_hud.gd" id="1_mlhk7"]
[ext_resource type="Script" path="res://scripts/option_container.gd" id="2_8v50y"]
[ext_resource type="FontFile" uid="uid://cx5igbhkb14mv" path="res://fonts/SoulwayFont-Demo.otf" id="3_7gxvg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qa163"]
bg_color = Color(0.0509804, 0.713726, 0.839216, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="LabelSettings" id="LabelSettings_coey7"]
font = ExtResource("3_7gxvg")
font_size = 28

[node name="PauseHud" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_mlhk7")

[node name="Panel" type="Panel" parent="."]
modulate = Color(0.807843, 0.870588, 0.964706, 1)
show_behind_parent = true
layout_mode = 2
offset_left = -175.0
offset_top = -125.0
offset_right = 175.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qa163")

[node name="PauseOptionsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="ResumeContainer" type="HBoxContainer" parent="PauseOptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
script = ExtResource("2_8v50y")

[node name="Label" type="Label" parent="PauseOptionsContainer/ResumeContainer"]
layout_mode = 2
text = "Resume"
label_settings = SubResource("LabelSettings_coey7")

[node name="LevelSelectContainer" type="HBoxContainer" parent="PauseOptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
script = ExtResource("2_8v50y")

[node name="Label" type="Label" parent="PauseOptionsContainer/LevelSelectContainer"]
layout_mode = 2
text = "Back to level select"
label_settings = SubResource("LabelSettings_coey7")

[node name="QuitGameContainer" type="HBoxContainer" parent="PauseOptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
script = ExtResource("2_8v50y")

[node name="Label" type="Label" parent="PauseOptionsContainer/QuitGameContainer"]
layout_mode = 2
text = "Quit Game"
label_settings = SubResource("LabelSettings_coey7")
